versions/3.4.0/docs/CustomFieldReference.md
# CustomFieldReference

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] 
**labels** | **list[str]** |  | [optional] [readonly] 
**options** | **list[str]** |  | [optional] [readonly] 
**name** | **str** |  | [optional] [readonly] 
**order** | **int** |  | [optional] [readonly] 
**type** | **str** |  | [optional] [readonly] 
**use_for_uploads** | **bool** |  | [optional] [readonly] 
**require_to_upload** | **bool** |  | [optional] [readonly] 
**non_user_editable** | **bool** |  | [optional] [readonly] 
**validation** | **str** |  | [optional] [readonly] 
**regex** | **str** |  | [optional] [readonly] 
**range_min** | **int** |  | [optional] [readonly] 
**range_max** | **int** |  | [optional] [readonly] 
**number_of_digits** | **int** |  | [optional] [readonly] 
**metadata_prefill** | **str** |  | [optional] [readonly] 
**highlight_expiration** | **bool** |  | [optional] [readonly] 
**multiple_response** | **bool** |  | [optional] [readonly] 
**help_text** | **str** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


