versions/3.5.0/docs/CustomFieldReference.md
# CustomFieldReference


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**labels** | **[{str: (str, none_type)}]** |  | [optional] [readonly] 
**options** | **[str, none_type]** |  | [optional] [readonly] 
**name** | **str** |  | [optional] [readonly] 
**order** | **int** |  | [optional] [readonly] 
**type** | **str** |  | [optional] [readonly] 
**use_for_uploads** | **bool** |  | [optional] [readonly] 
**require_to_upload** | **bool** |  | [optional] [readonly] 
**non_user_editable** | **bool** |  | [optional] [readonly] 
**validation** | **str, none_type** |  | [optional] [readonly] 
**regex** | **str, none_type** |  | [optional] [readonly] 
**range_min** | **int, none_type** |  | [optional] [readonly] 
**range_max** | **int, none_type** |  | [optional] [readonly] 
**number_of_digits** | **int, none_type** |  | [optional] [readonly] 
**metadata_prefill** | **str, none_type** |  | [optional] [readonly] 
**highlight_expiration** | **bool** |  | [optional] [readonly] 
**multiple_response** | **bool** |  | [optional] [readonly] 
**help_text** | **str, none_type** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


